--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
   html{
     background-color: azure;
     font-size: 20px;
-    font-family: cursive;
+    font-family: arial;
   }
   img{
     height: 100%;
