--- a/menu.css
+++ b/menu.css
@@ -6,7 +6,7 @@
     cursor: pointer;
 }
 .top{
-    background-color: rgb(68, 141, 146);
+    background-color: #ADD8E6;
     padding: 17px;
     display: flex;
     justify-content: end;
